# codex

codex-rs/: Cargo.toml  README.md
codex-rs/agent-observability/: BUILD.bazel  Cargo.toml
codex-rs/agent-observability/src/: contract.rs  lib.rs  progress.rs  wait.rs
codex-rs/context-maintenance-policy/: BUILD.bazel  Cargo.toml
codex-rs/context-maintenance-policy/src/: artifact_codecs.rs  contracts.rs  history_shape.rs  lib.rs  retention.rs  route_matrix.rs  tests.rs  thread_memory.rs
codex-rs/context-maintenance-policy/src/continuation_bridge/: baton.rs  mod.rs  rich_review.rs  supplemental.rs
codex-rs/context-maintenance-policy/templates/continuation_bridge/variants/baton/: prompt.md  schema.json
codex-rs/context-maintenance-policy/templates/continuation_bridge/variants/rich_review/: prompt.md
codex-rs/context-maintenance-policy/templates/thread_memory/: prompt.md  schema.json
codex-rs/semantic-broker/: BUILD.bazel  Cargo.toml
codex-rs/semantic-broker/src/: adjudicator.rs  candidates.rs  lib.rs  packet.rs  registry.rs  render.rs
docs/: advanced.md  agent-observability-3rd-audit-review.md  agent-observability-extraction-plan.md  agent-observability-implementation-spec.md  codex-turn-compiler-full.md  codex-turn-compiler-inferential-outline.md  compaction-policy-2nd-audit-review.md  compaction-policy-crate-extraction-plan.md  compaction-policy-hardening-implementation-spec.md  compaction-policy-hardening-plan.md  compaction-policy-hardening-pr6-cleanup-implementation-spec.md  compaction-policy-p0-route-matrix-implementation-spec.md  compaction-policy-p1-scaffold-implementation-spec.md  compaction-policy-p2-history-shaping-implementation-spec.md  compaction-policy-p3-artifact-codecs-implementation-spec.md  compaction-policy-p4-timing-law-implementation-spec.md  compaction-policy-post-pr6-followup-spec.md  compaction-policy-route-matrix.md  config.md  custom-fork-module-inventory.md  custom-governance-path-build-guide.md  fork-update-checklist.md  fork-updates.md  gptpro 2nd audit.md  local-builds.md  odeu-memory-implementation-pseudocode.md  odeu-memory-protocol.md  prompt-constitutional-hierarchy.md  release-alignment-log.md  rust-cache-isolation.md
scripts/: build-vscode-binary.sh  cargo-workflow.sh  finalize-rust-vhd-mount.sh  prune-build-artifacts.sh  (+4 more)
(+258 files in other folders)
